--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ title: SuperC documentation
 logo: /assets/img/logo.png
 google_analytics:
 theme: jekyll-theme-minimal
+collections:
+  docs:
+    output: true
